--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "es2017"
     ],
     "declaration": true,
-    "outDir": "./build",
+    "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "baseUrl": "src",
