--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "@enterprise-cmcs/macpro-serverless-running-stages",
   "version": "1.0.0",
   "description": "Deletes all Cloudformation Stacks associated to a specified Serverless stage.",
