--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": [
       "es2017"
     ],
+    "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src",
