--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "./dist/index.js",
   "typings": "./dist/index.js",
   "scripts": {
-    "test": "npm run build && node tests/run.mjs",
     "bp": "rm -rf ./dist && rm -rf ./node_modules && npm i --save && tsc && npm publish",
     "build": "tsc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "vitest --config ./src/tests/vitest.config.ts",
+    "test-ci": "vitest run --config ./src/tests/vitest.config.ts",
+    "test-gui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -31,10 +34,13 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@types/node": "^18.0.4",
+    "@vitest/coverage-c8": "^0.27.0",
+    "@vitest/ui": "^0.27.0",
     "lodash": "^4.17.21",
     "semantic-release": "^19.0.3",
     "tslog": "^4.4.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.27.0"
   },
   "release": {
     "branches": [
