--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-cloudformation": "^3.245.0",
     "@aws-sdk/client-s3": "^3.128.0",
     "@types/readline-sync": "^1.4.4",
     "readline-sync": "^1.4.10"
