--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.245.0",
-    "@aws-sdk/client-s3": "^3.128.0",
-    "@types/readline-sync": "^1.4.4",
-    "readline-sync": "^1.4.10"
+    "tslint": "^6.1.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.1",
@@ -38,7 +36,6 @@
     "@vitest/coverage-c8": "^0.27.0",
     "@vitest/ui": "^0.27.0",
     "aws-sdk-client-mock": "^2.0.1",
-    "lodash": "^4.17.21",
     "semantic-release": "^19.0.3",
     "tslog": "^4.4.3",
     "typescript": "^4.7.4",
